feat: add head table

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -28,6 +28,24 @@
           <h1 class="col-8">Мониторинг</h1>
         </div>
 
+        <div class="head-table">
+          <table class="table table-striped table-hover monitor">
+            <thead>
+              <tr>
+                <th scope="col">#</th>
+                <th scope="col">Товар</th>
+                <th scope="col">Моя цена</th>
+
+                <th scope="col">АЛМА</th>
+
+                <th scope="col">КраснаяЦена</th>
+
+                <th scope="col">Комментарий</th>
+              </tr>
+            </thead>
+          </table>
+        </div>
+
         <div class="accordion" id="accordionExample">
           <div class="accordion-item">
             <h2 class="accordion-header">
@@ -49,19 +67,6 @@
               <div class="accordion-body">
                 <div class="table">
                   <table class="table table-striped table-hover monitor">
-                    <thead>
-                      <tr>
-                        <th style="width: 2rem">#</th>
-                        <th scope="col">Товар</th>
-                        <th scope="col">Моя цена</th>
-
-                        <th scope="col">АЛМА</th>
-
-                        <th scope="col">КраснаяЦена</th>
-
-                        <th scope="col">Комментарий</th>
-                      </tr>
-                    </thead>
                     <tbody>
                       <tr>
                         <td>1</td>
@@ -207,19 +212,6 @@
               <div class="accordion-body">
                 <div class="table">
                   <table class="table table-striped table-hover monitor">
-                    <thead>
-                      <tr>
-                        <th style="width: 2rem">#</th>
-                        <th scope="col">Товар</th>
-                        <th scope="col">Моя цена</th>
-
-                        <th scope="col">АЛМА</th>
-
-                        <th scope="col">КраснаяЦена</th>
-
-                        <th scope="col">Комментарий</th>
-                      </tr>
-                    </thead>
                     <tbody>
                       <tr>
                         <td>1</td>
@@ -365,19 +357,6 @@
               <div class="accordion-body">
                 <div class="table">
                   <table class="table table-striped table-hover monitor">
-                    <thead>
-                      <tr>
-                        <th style="width: 2rem">#</th>
-                        <th scope="col">Товар</th>
-                        <th scope="col">Моя цена</th>
-
-                        <th scope="col">АЛМА</th>
-
-                        <th scope="col">КраснаяЦена</th>
-
-                        <th scope="col">Комментарий</th>
-                      </tr>
-                    </thead>
                     <tbody>
                       <tr>
                         <td>1</td>
