--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -1,26 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>document</title>
-    <link
-      href="https://monitor.stroyker.pro/static/bootstrap/css/bootstrap.min.css"
-      rel="stylesheet"
-    />
-    <link
-      href="https://monitor.stroyker.pro/static/css/custom.css?v3"
-      rel="stylesheet"
-    />
-    <link
-      href="https://monitor.stroyker.pro/static/css/custom-media.css?v2"
-      rel="stylesheet"
-    />
-    <link
-      href="https://monitor.stroyker.pro/static/libs/fontawesome/css/all.min.css"
-      rel="stylesheet"
-    />
-  </head>
+  <!--#include virtual="/shared/components/head/index.html" -->
   <body>
     <main>
       <div class="container">
@@ -66,128 +46,7 @@
             >
               <div class="accordion-body">
                 <div class="table">
-                  <table class="table table-striped table-hover monitor">
-                    <tbody>
-                      <tr>
-                        <td>1</td>
-                        <td class="product-link">
-                          <a
-                            class="text-decoration-none"
-                            href="/monitor/product/edit/443/"
-                            >Гипс тест 5</a
-                          >
-                        </td>
-                        <td
-                          title="обновлено 24.08.2023 17:00"
-                          style="color: #3e4145"
-                        >
-                          250,00
-                        </td>
-
-                        <td class="competitor-price">
-                          <a
-                            target="_blank"
-                            title="обновлено 24.08.2023 17:00"
-                            class="text-decoration-none"
-                            href="https://alma-stroymaterial.ru/catalog/product/jetbau-shtukaturka-profi-gipsovaia-dlia-ruchnogo-i-mashinnogo-naneseniia-5-50mm/"
-                            style="color: #3e4145"
-                          >
-                            250,0
-                          </a>
-                        </td>
-
-                        <td class="competitor-price">
-                          <a
-                            target="_blank"
-                            title="обновлено 24.08.2023 17:00"
-                            class="text-decoration-none"
-                            href="https://red-price63.ru/catalog/product/podshivka-karniza-sofitami-m/docke-standard-sofit-s-centralnoj-perforaciej-t4-300h0305m-0915m2/"
-                            style="color: #00cc00ff"
-                          >
-                            430,0
-                          </a>
-                        </td>
-
-                        <td class="competitor-price"></td>
-                      </tr>
-
-                      <tr>
-                        <td>2</td>
-                        <td class="product-link">
-                          <a
-                            class="text-decoration-none"
-                            href="/monitor/product/edit/444/"
-                            >тест гипс 1</a
-                          >
-                        </td>
-                        <td
-                          title="обновлено 24.08.2023 17:00"
-                          style="color: #3e4145"
-                        >
-                          275,00
-                        </td>
-
-                        <td class="competitor-price">
-                          <a
-                            target="_blank"
-                            title="обновлено 24.08.2023 17:00"
-                            class="text-decoration-none"
-                            href="https://alma-stroymaterial.ru/catalog/product/jetbau-shtukaturka-profi-gipsovaia-dlia-ruchnogo-i-mashinnogo-naneseniia-5-50mm/"
-                            style="color: #ff0000ff; font-weight: bold"
-                          >
-                            250,0
-                          </a>
-                        </td>
-
-                        <td class="competitor-price">
-                          <a
-                            target="_blank"
-                            title="обновлено 24.08.2023 17:00"
-                            class="text-decoration-none"
-                            href="https://red-price63.ru/catalog/product/podshivka-karniza-sofitami-m/docke-standard-sofit-s-centralnoj-perforaciej-t4-300h0305m-0915m2/"
-                            style="color: #00cc00ff"
-                          >
-                            430,0
-                          </a>
-                        </td>
-
-                        <td class="competitor-price"></td>
-                      </tr>
-
-                      <tr>
-                        <td>3</td>
-                        <td class="product-link">
-                          <a
-                            class="text-decoration-none"
-                            href="/monitor/product/edit/373/"
-                            >Фанера</a
-                          >
-                        </td>
-                        <td
-                          title="обновлено 24.08.2023 17:00"
-                          style="color: #3e4145"
-                        >
-                          553,7
-                        </td>
-
-                        <td class="competitor-price">
-                          <a
-                            target="_blank"
-                            title="обновлено 24.08.2023 15:00"
-                            class="text-decoration-none"
-                            href="https://alma-stroymaterial.ru/catalog/product/fanera-khvoinaia-fsf-2440kh1220kh12mm-sort-3-3-33sht-pod/"
-                            style="color: #00cc00ff"
-                          >
-                            1270,0
-                          </a>
-                        </td>
-
-                        <td class="competitor-price"></td>
-
-                        <td class="competitor-price">товар без конкуренции</td>
-                      </tr>
-                    </tbody>
-                  </table>
+                  <!--#include virtual="/components/table/index.html" -->
                 </div>
               </div>
             </div>
@@ -211,128 +70,7 @@
             >
               <div class="accordion-body">
                 <div class="table">
-                  <table class="table table-striped table-hover monitor">
-                    <tbody>
-                      <tr>
-                        <td>1</td>
-                        <td class="product-link">
-                          <a
-                            class="text-decoration-none"
-                            href="/monitor/product/edit/443/"
-                            >Гипс тест 5</a
-                          >
-                        </td>
-                        <td
-                          title="обновлено 24.08.2023 17:00"
-                          style="color: #3e4145"
-                        >
-                          250,00
-                        </td>
-
-                        <td class="competitor-price">
-                          <a
-                            target="_blank"
-                            title="обновлено 24.08.2023 17:00"
-                            class="text-decoration-none"
-                            href="https://alma-stroymaterial.ru/catalog/product/jetbau-shtukaturka-profi-gipsovaia-dlia-ruchnogo-i-mashinnogo-naneseniia-5-50mm/"
-                            style="color: #3e4145"
-                          >
-                            250,0
-                          </a>
-                        </td>
-
-                        <td class="competitor-price">
-                          <a
-                            target="_blank"
-                            title="обновлено 24.08.2023 17:00"
-                            class="text-decoration-none"
-                            href="https://red-price63.ru/catalog/product/podshivka-karniza-sofitami-m/docke-standard-sofit-s-centralnoj-perforaciej-t4-300h0305m-0915m2/"
-                            style="color: #00cc00ff"
-                          >
-                            430,0
-                          </a>
-                        </td>
-
-                        <td class="competitor-price"></td>
-                      </tr>
-
-                      <tr>
-                        <td>2</td>
-                        <td class="product-link">
-                          <a
-                            class="text-decoration-none"
-                            href="/monitor/product/edit/444/"
-                            >тест гипс 1</a
-                          >
-                        </td>
-                        <td
-                          title="обновлено 24.08.2023 17:00"
-                          style="color: #3e4145"
-                        >
-                          275,00
-                        </td>
-
-                        <td class="competitor-price">
-                          <a
-                            target="_blank"
-                            title="обновлено 24.08.2023 17:00"
-                            class="text-decoration-none"
-                            href="https://alma-stroymaterial.ru/catalog/product/jetbau-shtukaturka-profi-gipsovaia-dlia-ruchnogo-i-mashinnogo-naneseniia-5-50mm/"
-                            style="color: #ff0000ff; font-weight: bold"
-                          >
-                            250,0
-                          </a>
-                        </td>
-
-                        <td class="competitor-price">
-                          <a
-                            target="_blank"
-                            title="обновлено 24.08.2023 17:00"
-                            class="text-decoration-none"
-                            href="https://red-price63.ru/catalog/product/podshivka-karniza-sofitami-m/docke-standard-sofit-s-centralnoj-perforaciej-t4-300h0305m-0915m2/"
-                            style="color: #00cc00ff"
-                          >
-                            430,0
-                          </a>
-                        </td>
-
-                        <td class="competitor-price"></td>
-                      </tr>
-
-                      <tr>
-                        <td>3</td>
-                        <td class="product-link">
-                          <a
-                            class="text-decoration-none"
-                            href="/monitor/product/edit/373/"
-                            >Фанера</a
-                          >
-                        </td>
-                        <td
-                          title="обновлено 24.08.2023 17:00"
-                          style="color: #3e4145"
-                        >
-                          553,7
-                        </td>
-
-                        <td class="competitor-price">
-                          <a
-                            target="_blank"
-                            title="обновлено 24.08.2023 15:00"
-                            class="text-decoration-none"
-                            href="https://alma-stroymaterial.ru/catalog/product/fanera-khvoinaia-fsf-2440kh1220kh12mm-sort-3-3-33sht-pod/"
-                            style="color: #00cc00ff"
-                          >
-                            1270,0
-                          </a>
-                        </td>
-
-                        <td class="competitor-price"></td>
-
-                        <td class="competitor-price">товар без конкуренции</td>
-                      </tr>
-                    </tbody>
-                  </table>
+                  <!--#include virtual="/components/table/index.html" -->
                 </div>
               </div>
             </div>
@@ -356,128 +94,7 @@
             >
               <div class="accordion-body">
                 <div class="table">
-                  <table class="table table-striped table-hover monitor">
-                    <tbody>
-                      <tr>
-                        <td>1</td>
-                        <td class="product-link">
-                          <a
-                            class="text-decoration-none"
-                            href="/monitor/product/edit/443/"
-                            >Гипс тест 5</a
-                          >
-                        </td>
-                        <td
-                          title="обновлено 24.08.2023 17:00"
-                          style="color: #3e4145"
-                        >
-                          250,00
-                        </td>
-
-                        <td class="competitor-price">
-                          <a
-                            target="_blank"
-                            title="обновлено 24.08.2023 17:00"
-                            class="text-decoration-none"
-                            href="https://alma-stroymaterial.ru/catalog/product/jetbau-shtukaturka-profi-gipsovaia-dlia-ruchnogo-i-mashinnogo-naneseniia-5-50mm/"
-                            style="color: #3e4145"
-                          >
-                            250,0
-                          </a>
-                        </td>
-
-                        <td class="competitor-price">
-                          <a
-                            target="_blank"
-                            title="обновлено 24.08.2023 17:00"
-                            class="text-decoration-none"
-                            href="https://red-price63.ru/catalog/product/podshivka-karniza-sofitami-m/docke-standard-sofit-s-centralnoj-perforaciej-t4-300h0305m-0915m2/"
-                            style="color: #00cc00ff"
-                          >
-                            430,0
-                          </a>
-                        </td>
-
-                        <td class="competitor-price"></td>
-                      </tr>
-
-                      <tr>
-                        <td>2</td>
-                        <td class="product-link">
-                          <a
-                            class="text-decoration-none"
-                            href="/monitor/product/edit/444/"
-                            >тест гипс 1</a
-                          >
-                        </td>
-                        <td
-                          title="обновлено 24.08.2023 17:00"
-                          style="color: #3e4145"
-                        >
-                          275,00
-                        </td>
-
-                        <td class="competitor-price">
-                          <a
-                            target="_blank"
-                            title="обновлено 24.08.2023 17:00"
-                            class="text-decoration-none"
-                            href="https://alma-stroymaterial.ru/catalog/product/jetbau-shtukaturka-profi-gipsovaia-dlia-ruchnogo-i-mashinnogo-naneseniia-5-50mm/"
-                            style="color: #ff0000ff; font-weight: bold"
-                          >
-                            250,0
-                          </a>
-                        </td>
-
-                        <td class="competitor-price">
-                          <a
-                            target="_blank"
-                            title="обновлено 24.08.2023 17:00"
-                            class="text-decoration-none"
-                            href="https://red-price63.ru/catalog/product/podshivka-karniza-sofitami-m/docke-standard-sofit-s-centralnoj-perforaciej-t4-300h0305m-0915m2/"
-                            style="color: #00cc00ff"
-                          >
-                            430,0
-                          </a>
-                        </td>
-
-                        <td class="competitor-price"></td>
-                      </tr>
-
-                      <tr>
-                        <td>3</td>
-                        <td class="product-link">
-                          <a
-                            class="text-decoration-none"
-                            href="/monitor/product/edit/373/"
-                            >Фанера</a
-                          >
-                        </td>
-                        <td
-                          title="обновлено 24.08.2023 17:00"
-                          style="color: #3e4145"
-                        >
-                          553,7
-                        </td>
-
-                        <td class="competitor-price">
-                          <a
-                            target="_blank"
-                            title="обновлено 24.08.2023 15:00"
-                            class="text-decoration-none"
-                            href="https://alma-stroymaterial.ru/catalog/product/fanera-khvoinaia-fsf-2440kh1220kh12mm-sort-3-3-33sht-pod/"
-                            style="color: #00cc00ff"
-                          >
-                            1270,0
-                          </a>
-                        </td>
-
-                        <td class="competitor-price"></td>
-
-                        <td class="competitor-price">товар без конкуренции</td>
-                      </tr>
-                    </tbody>
-                  </table>
+                  <!--#include virtual="/components/table/index.html" -->
                 </div>
               </div>
             </div>
@@ -487,7 +104,5 @@
       </div>
     </main>
   </body>
-  <script src="https://monitor.stroyker.pro/static/js/jquery3.6.0.min.js"></script>
-  <script src="https://monitor.stroyker.pro/static/bootstrap/js/bootstrap.bundle.min.js"></script>
-  <script src="https://monitor.stroyker.pro/static/feedback/js/feedback.js"></script>
+  <!--#include virtual="/shared/components/scripts/index.html" -->
 </html>
