--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -8,23 +8,7 @@
           <h1 class="col-8">Мониторинг</h1>
         </div>
 
-        <div class="head-table">
-          <table class="table table-striped table-hover monitor">
-            <thead>
-              <tr>
-                <th scope="col">#</th>
-                <th scope="col">Товар</th>
-                <th scope="col">Моя цена</th>
-
-                <th scope="col">АЛМА</th>
-
-                <th scope="col">КраснаяЦена</th>
-
-                <th scope="col">Комментарий</th>
-              </tr>
-            </thead>
-          </table>
-        </div>
+        <!--#include virtual="/components/table/headTable.html" -->
 
         <div class="accordion" id="accordionExample">
           <div class="accordion-item">
@@ -45,9 +29,7 @@
               class="accordion-collapse collapse show"
             >
               <div class="accordion-body">
-                <div class="table">
-                  <!--#include virtual="/components/table/index.html" -->
-                </div>
+                <!--#include virtual="/components/table/table.html" -->
               </div>
             </div>
           </div>
@@ -69,9 +51,7 @@
               class="accordion-collapse collapse"
             >
               <div class="accordion-body">
-                <div class="table">
-                  <!--#include virtual="/components/table/index.html" -->
-                </div>
+                <!--#include virtual="/components/table/table.html" -->
               </div>
             </div>
           </div>
@@ -93,9 +73,7 @@
               class="accordion-collapse collapse"
             >
               <div class="accordion-body">
-                <div class="table">
-                  <!--#include virtual="/components/table/index.html" -->
-                </div>
+                <!--#include virtual="/components/table/table.html" -->
               </div>
             </div>
           </div>
